fixed footer css and alignments

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -599,9 +599,10 @@ h4 {
   }
 
   .footer-container {
+    padding: 0 201px 0 196px;
     .powered-by-container {
       padding: 0;
-      margin-right: 441px;
+      // margin-right: 365px;
     }
 
     .social-media-container {
